<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">优点</string>
    <string name="NA">N/A</string>
    <string name="btn_submit">提交</string>
    <string name="digits">0123456789abcdefghijklmnopqrstuvwxyZABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="title_settings_user_info">修改个人信息</string>
    <string name="action_settings">设置</string>
    <string name="lable_nickname">昵称</string>
    <string name="lable_sex">性别</string>
    <string name="lable_city">城市</string>
    <string name="lable_avatar">头像</string>
    <string name="lable_job">职业</string>
    <string name="lable_report">举报</string>
    <string name="update_pic">上传图片</string>
    <string name="lable_update_avatar">上传头像</string>
    <string name="lable_alert_report_user">确定要举报该用户吗？</string>
    <string name="lable_wechat">微信</string>
    <string name="lable_qq">qq号</string>
    <string name="lable_phone">手机</string>
    <string name="lable_review">预览</string>
    <string name="hint_nickname">您的昵称</string>
    <string name="hint_wechat">您的微信</string>
    <string name="hint_sex">您的性别</string>
    <string name="hint_city">您所在城市</string>
    <string name="hint_job">您的职业</string>
    <string name="hint_phone">您的手机号</string>
    <string name="hint_qq"> 你的QQ号</string>
    <string name="clearSuccess">清除成功</string>
    <string name="lable_feedback">用户反馈</string>
    <string name="lable_news">消息推送</string>
    <string name="lable_remark">评分</string>
    <string name="lable_chat">消息</string>
    <string name="lable_jiage">价格</string>
    <string name="please_input">请输入...</string>
    <string name="lable_cleancache">清除缓存</string>
    <string name="lable_changeaccount">切换账号</string>
    <string name="lable_price"><![CDATA[<b><big>%1$s</big></b> 元/%2$s]]></string>
    <string name="currentVersion">当前版本:v%s</string>
    <string name="currentAccount">当前账号:%s</string>
    <string name="title_activity_web_launcher">WebLauncher</string>
    <string name="btn_contact_ta">联系TA</string>
    <string name="btn_buy_skill">购买技能</string>
    <string name="btn_edit_skill">编辑技能</string>
    <string name="mobile_input_empty_message">手机号不能为空</string>
    <string name="code_input_empty_message">验证码不能为空</string>
    <string name="nickname_input_empty_message">昵称不能为空</string>
    <string name="contact_input_empty_message">微信、QQ、手机号至少填写一种联系方式</string>
    <string name="contact_input_empty_message2">● 联系方式需至少填写一种</string>
    <string name="avatar_input_empty_message">头像不能为空</string>
    <string name="lable_user_protocol"><u>注册即同意用户协议</u></string>
    <string name="input_phone_hint">输入手机号码</string>
    <string name="input_valicode_hint">输入验证码</string>
    <string name="input_feedback_hint">我想说</string>
    <string name="get_valicode">获取验证码</string>
    <string name="input_nickname_hint">输入昵称</string>
    <string name="btn_next">下一步</string>
    <string name="btn_back">返回</string>
    <string name="btn_exit">退出</string>
    <string name="unit">单位</string>
    <string name="update_avatar">修改头像</string>
    <string name="update">修改</string>
    <string name="base_info">基本信息</string>
    <string name="lb_delete">删除</string>
    <string name="lb_sig">个性签名</string>
    <string name="lb_sig_hint">这家伙是不是有点懒？</string>
    <string name="btn_edit">编辑</string>
    <string name="share_title">将该技能分享至：</string>
    <string name="release_title">发布成功！</string>
    <string name="lable_skill_addbutton">ELSE  自定义 +</string>
    <string name="add_skill">添加技能</string>
    <string name="create_skill_title">技能标题</string>
    <string name="create_skill_content">技能描述</string>
    <string name="create_skill_price">请输入价格(单位元)</string>
    <string name="create_skill_unit"><![CDATA[“个”“次”等（4字以内)]]></string>
    <string name="create_not_empty_name">技能名字不能为空</string>
    <string name="create_not_empty_content">技能描述不能为空</string>
    <string name="create_not_empty_pic">技能图片不能为空</string>
    <string name="create_not_empty_pirce">技能价格不能为空</string>
    <string name="create_not_empty_unit">价格单位不能为空</string>
    <string name="status_xiajia">下架</string>
    <string name="not_changed">没有任何修改</string>
    <string name="status_shangjia">上架</string>
    <string name="feedback_item_user_lable">您说:</string>
    <string name="feedback_item_dev_lable">:官方</string>
    <string name="toast_checkversion">检查更新中....</string>
    <string name="checkversion_ing">检查更新中,请稍后!</string>
    <string name="check_newversion_faild">检查版本更新失败!</string>
    <string name="no_newversion">没有新版本!</string>
    <string name="my_remainder">我的余额</string>
    <string name="my_remainder_lb">我的余额(元)</string>
    <string name="withdraw_lb">已提现金额</string>
    <string name="bind_bank_card">绑定银行卡</string>
    <string name="toast_bind_bank_card">支付宝账号未绑定</string>
    <string name="apply_vouch">申请担保交易</string>
    <string name="remainder_lb">余额(元)</string>
    <string name="duringing_lb">提现中</string>
    <string name="during_lb">提现</string>
    <string name="look_order_lb">查看订单</string>
    <string name="during_comment"><![CDATA[最多7个工作日到帐,节假日顺延]]></string>
    <string name="during_comment2"><![CDATA[(每次提现≥50元)]]></string>
    <string name="during_comment3"><![CDATA[担保交易金额，需<font color="#00acff">买家确认后</font>可提为<font color="#00acff">余额</font>]]></string>
    <string name="prompt_lb">提示</string>
    <string name="skill_preview_title_bar"> 预 览</string>
    <string name="skill_preview_connect">联系Ta</string>
    <string name="skill_preview_add_skill">添加技能</string>
    <string name="skill_date_format">MM-dd HH:mm</string>
    <string name="skill_detail_activity_title">技能详情</string>
    <string name="rmark_pulish_title">日记编辑</string>
    <string name="basic_info_activity_title">个人信息认证</string>
    <string name="basic_info_name">姓名</string>
    <string name="basic_info_id">身份证号</string>
    <string name="basic_info_mobile">联系手机</string>
    <string name="basic_info_code">验证码</string>
    <string name="basic_info_code_null">验证码不能为空</string>
    <string name="basic_info_name_null">名字不能为空</string>
    <string name="basic_info_id_null">身份证不能为空</string>
    <string name="basic_info_mobile_null">联系电话不能为空</string>
    <string name="basic_info_mobile_illegal">手机号码格式不正确</string>
    <string name="basic_info_id_illegal">身份证格式不正确</string>
    <string name="basic_info_certify_failure">个人信息认证失败</string>
    <string name="get_code">获取验证码</string>
    <string name="during_dialog_title"> 本次提现(元):</string>
    <string name="during_dialog_title_error_null"><![CDATA[<font color="#ff0000">请填写提款金额</font>]]></string>
    <string name="during_dialog_title_error_format"><![CDATA[<font color="#ff0000">填写格式不正确</font>]]></string>
    <string name="during_dialog_title_error"><![CDATA[<font color="#ff0000">单次提现金额不得低于50元</font>]]></string>
    <string name="during_dialog_edit_hint">本次要提现的余额</string>
    <string name="during_dialog_sumit">提现</string>
    <string name="activity_bind_bank">绑定银行卡</string>
    <string name="bind_bank_notice">"注意:\n1：请正确的填写银行卡和姓名，否则会导致提现失败\n2：仅支持大陆储蓄卡，请勿填写信用卡信息\n3：我们会严格保密客户信息，银行卡信息仅作为提现使用\n4：如果有任何问题，请及时联系优点客服：kf@ketie.me"</string>
    <string name="apply_title"> 申请担保交易</string>
    <string name="apply_tip"> 请填写申请信息</string>
    <string name="apply_hint_nickname">请输入您的称呼</string>
    <string name="apply_hint_phone"> 请输入您的电话</string>
    <string name="apply_hint_qq"> 请输入您的QQ</string>
    <string name="apply_hint_email">请输入您的邮箱</string>
    <string name="apply_hint_reason">请输入您的理由</string>
    <string name="apply_notification">注意：\n1:卖家可以自由选择是否需要平台担保交易\n2:申请成功后，平台会作为担保方，在客户确认收货后放款给卖家\n3:担保交易货款需要申请提现</string>
    <string name="apply_button_submit">提交</string>
    <string name="apply_button_reedit">重新编辑</string>
    <string name="apply_button_cancel">取消申请</string>
    <string name="apply_button_edit">编辑技能</string>
    <string name="pay_topic">去编辑技能，开通线上支付功能</string>
    <string name="apply_nickname">称呼：</string>
    <string name="apply_phone"> 电话：</string>
    <string name="apply_qq"> QQ：</string>
    <string name="apply_email">邮箱：</string>
    <string name="apply_reason">原因：</string>
    <string name="apply_reason_number">0/500</string>
    <string name="apply_nickname_null">称呼不能为空</string>
    <string name="apply_phone_null">手机不能为空</string>
    <string name="apply_qq_null">qq不能为空</string>
    <string name="apply_email_null">邮箱不能为空</string>
    <string name="apply_reason_null">理由不能为空</string>
    <string name="apply_alertdialog_tip">提交成功，请耐心等待结果</string>
    <string name="vouch_detail_tip">去编辑技能，开通网上支付功能</string>
    <string name="vouch_detail_during">审核中...</string>
    <string name="vouch_detail_success">申请通过</string>
    <string name="vouch_detail_cancel">申请取消</string>
    <string name="vouch_detail_deny">拒绝申请</string>
    <string name="vouch_dialog_title">开启在线支付需要填写认证信息</string>
    <string name="btn_name">确定</string>
    <string name="btn_name_confirm">确定</string>
    <string name="btn_name_cancel">取消</string>
    <string name="bind_bank_info_bankname">开&#160;&#160;户&#160;&#160;行：</string>
    <string name="bind_bank_info_branch">支&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;行：</string>
    <string name="bind_bank_info_number">卡&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号：</string>
    <string name="bind_bank_info_username">持&#160;&#160;卡&#160;&#160;人：</string>
    <string name="bind_bank_info_phonenumber">绑定手机：</string>
    <string name="bind_bank_info_rebind">重新认证</string>
    <string name="bind_bank_info_unbind">解除绑定</string>
    <string name="order_list_btn_saled">已出售订单</string>
    <string name="order_list_btn_ordered">已购买订单</string>
    <string name="order_item_bnt_accept">接单</string>
    <string name="order_status_wait_accept">待接单</string>
    <string name="order_status_unpay">未支付</string>
    <string name="order_status_delete">已删除</string>
    <string name="order_status_payed">已支付</string>
    <string name="order_status_accept">已接单</string>
    <string name="order_status_send_goods">已发货 </string>
    <string name="order_status_confirm_deal">交易完成</string>
    <string name="order_status_close">已取消 </string>
    <string name="order_status_cancle">已取消</string>
    <string name="order_status_buyer_cancle">已取消 </string>
    <string name="order_status_buyer_close">已取消</string>
    <string name="order_total_fee"><![CDATA[<b><font color="#ffffff"><strong>订单价格为：<big>%1$s</big></strong>元</font></b><br/>]]></string>
    <string name="order_total_fee_for_balance"><![CDATA[<b><font color="#17ace7"><small>余额已经抵扣%1$s元<small></font></b> ]]></string>
    <string name="buyer_operator_pay">支付</string>
    <string name="buyer_operator_confirm">确认收货</string>
    <string name="buyer_operator_wait_accept">等待接单</string>
    <string name="buyer_operator_wait_send">等待发货</string>
    <string name="seller_operator_accept">接单</string>
    <string name="seller_operator_send">发货</string>
    <string name="seller_operator_wait_pay">等待支付</string>
    <string name="order_detail_title">订单详情</string>
    <string name="tip_for_buyer_pay">支付有效期还剩%s,有效期过后订单将关闭</string>
    <string name="tip_for_buyer_confirm">主动收货操作时间还剩%s,超过时间将自动收货</string>
    <string name="tip_for_seller_accept">接单有效期还剩%s,有效期过后订单将关闭</string>
    <string name="tip_for_seller_send">发货有效期还剩%s,有效期过后订单将关闭</string>
    <string name="order_saled_total_fee"><![CDATA[<font color="#000000">出售订单合计：</font><b><font color="#1e90ff"><big><big><strong>%1$s</strong></big></big></font></b><font color="#000000"> 元</font>]]></string>
    <string name="order_buyed_total_fee"><![CDATA[<font color="#000000">订单合计：</font><b><font color="#1e90ff"><big><big><strong>%1$s</strong></big></big></font></b><font color="#000000"> 元</font>]]></string>
    <string name="order_buyed_total_fee_for_balance"><![CDATA[<font color="#000000">订单合计：</font><b><font color="#17ace7"><big><big><strong>%1$s</strong></big></big></font></b><font color="#000000"> 元</font><br/><font color="#17ace7"><small>余额已经抵扣%2$s元<small></font>]]></string>
    <string name="order_skill_price"><![CDATA[<b><font >%1$s元/%2$s</font></b>]]></string>
</resources>