<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="maimeng.yodian.app.client.android.model.user.User" />

    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryGrey"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/lable_avatar"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <maimeng.yodian.app.client.android.widget.YDViewBitmap
                    android:id="@+id/user_avatar"
                    android:layout_width="@dimen/user_avatar_dimen"
                    android:layout_height="@dimen/user_avatar_dimen"
                    android:layout_margin="10dp"
                    android:src="@{user.avatar}"
                    app:roundAsCircle="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update_avatar"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/base_info"
                android:textSize="14sp" />

            <LinearLayout
                style="@style/formItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/formLableStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_nickname" />


                <EditText
                    android:id="@+id/nickname"
                    style="@style/formEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_nickname"
                    android:text="@{user.nickname}" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/div_line" />

            <LinearLayout
                style="@style/formItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/formLableStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_sex" />

                <TextView
                    android:id="@+id/sex"
                    style="@style/formEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_sex"
                    android:text="@{user.info.sex}"
                    android:textSize="19sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/div_line" />

            <LinearLayout
                style="@style/formItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/formLableStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_city" />

                <!--<TextView-->
                <!--android:id="@+id/city"-->
                <!--style="@style/formEditTextStyle"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:hint="@string/hint_city"-->
                <!--android:text="@{user.info.city}" />-->
                <LinearLayout
                    style="@style/formEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cities"
                        style="@style/formEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_weight="1"
                        android:hint="@string/hint_city"
                        android:text="@{user.info.province+user.info.city+user.info.district}"
                        android:textSize="19sp" />
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/div_line" />

            <LinearLayout
                style="@style/formItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/formLableStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_job" />

                <EditText
                    android:id="@+id/job"
                    style="@style/formEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_job"
                    android:text="@{user.info.job}" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/lb_sig"
                android:textSize="14sp" />

            <FrameLayout
                style="@style/formItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/signature"
                    style="@style/formEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:hint="@string/lb_sig_hint"
                    android:maxLength="30"
                    android:singleLine="false"
                    android:text="@{user.info.signature}" />

                <TextView
                    android:id="@+id/signature_count"
                    style="@style/formLableStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:layout_marginBottom="0dp"
                    android:layout_marginTop="0dp"
                    android:paddingRight="5dp"
                    android:text="0/30"
                    android:textSize="14sp" />
            </FrameLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/contact_input_empty_message2"
                android:textSize="14sp" />

            <LinearLayout
                style="@style/formItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/formLableStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_wechat" />

                <EditText
                    android:id="@+id/wechat"
                    style="@style/formEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_wechat"
                    android:text="@{user.wechat}" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/div_line" />

            <LinearLayout
                style="@style/formItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/formLableStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_qq" />

                <EditText
                    android:id="@+id/qq"
                    style="@style/formEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_qq"
                    android:inputType="number"
                    android:maxLength="11"
                    android:text="@{user.info.qq}" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/div_line" />

            <LinearLayout
                style="@style/formItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/formLableStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_phone" />

                <EditText
                    android:id="@+id/phone"
                    style="@style/formEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:text="@{user.info.contact}" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn_submit_background"
                android:paddingLeft="100dp"
                android:paddingRight="100dp"
                android:text="@string/btn_submit" />

        </LinearLayout>
    </ScrollView>
</layout>

