<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="remainder"
            type="maimeng.yodian.app.client.android.model.Remainder" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/during_dialog_background"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_padding"
            android:text="@string/during_dialog_title"
            android:textColor="#fff" />

        <EditText
            android:id="@+id/money"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/normal_padding_2x"
            android:layout_marginRight="@dimen/normal_padding_2x"
            android:background="@drawable/chat_edit"
            android:gravity="center"
            android:hint="@string/during_dialog_edit_hint"
            android:inputType="numberDecimal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_padding"
            android:background="@drawable/btn_oval_bg_yellow"
            android:gravity="center"
            android:text="@string/during_dialog_sumit"
            android:textColor="#fff" />
    </LinearLayout>
</layout>