<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="remainder"
            type="maimeng.yodian.app.client.android.model.remainder.Remainder" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/normal_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_padding"
                    android:text="@string/remainder_lb" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_height_big"
                    android:text="@{remainder.money}"
                    android:textColor="@color/btn_login_normal"
                    android:textSize="@dimen/remainder_text_size"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/freeze"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:textSize="@dimen/text_size_small"
                    />

                <TextView
                    android:id="@+id/btn_during"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginBottom="@dimen/normal_padding"
                    android:background="@mipmap/btn_oval_bg_blue"
                    android:gravity="center"
                    android:text="@string/during_lb"
                    android:textSize="@dimen/margin_large"
                    android:textColor="#fff" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/remaubder_info_center_bg"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/normal_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_padding_2x"
                    android:text="@string/duringing_lb"
                    android:textColor="@color/btn_login_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{remainder.during}"
                    android:textColor="@color/btn_login_normal"
                    android:textSize="@dimen/remainder_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_padding"
                    android:text="@string/during_comment" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/during_comment2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="@dimen/normal_padding_2x">

                <TextView

                    style="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_lb"
                    android:textColor="@color/btn_login_normal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/html_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/normal_padding"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/my_sale_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_padding_2x"
                    android:paddingLeft="@dimen/padding_large"
                    android:paddingRight="@dimen/padding_large"
                    android:background="@mipmap/btn_oval_bg_blue"
                    android:gravity="center"
                    android:text="@string/look_order_lb"
                    android:textSize="@dimen/margin_large"
                    android:textColor="#fff" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>